# modern-chess

./: .gitignore  Cargo.toml  README.md  movements.json
apps/cli/: Cargo.toml
apps/cli/src/: main.rs
apps/server/: Cargo.toml
apps/server/src/: main.rs
apps/web/: index.html  package.json  vite.config.ts
apps/web/src/: App.tsx
crates/engine/: Cargo.toml
crates/engine/specs/: 4player_chess.json  ataxx.json  capablanca.json  chaturanga.json  chess.json  crazyhouse.json  janggi_cannon.json  king_of_the_hill.json  mini_xiangqi.json  racing_kings.json  shatranj.json  shogi.json  solidarity.json  three_check.json
crates/engine/src/: lib.rs
specs/: SPEC_FORMAT.md  chess.json  king.json  pawn.json  queen.json
specs/games/: chess.json
specs/pieces/: bishop.json  king.json  knight.json  rook.json
src/: lib.rs  main.rs
src.old/board/: available_movement.rs  position.rs  presets.rs
src.old/piece/: mod.rs  movements.rs
src/board/: available_movement.rs  dimensions.rs  mod.rs  presets.rs  tests.rs
src/logic/: board.rs  game.rs  mod.rs  move_action.rs  move_blueprint.rs  piece.rs  piece_blueprint.rs
src/logic/blueprint/: mod.rs  move_blueprint.rs  piece_blueprint.rs
src/logic/board/: mod.rs  move_blueprint.rs  piece_blueprint.rs  player_piece.rs  struct.rs
src/logic/game/: game.rs  main.rs  mod.rs
src/logic/piece/: mod.rs  struct.rs
src/piece/: mod.rs  movements.rs  parser.rs
src/piece/structs/: mod.rs  (+5 more)
src/shared/: constants.rs  effect.rs  mod.rs  move.rs  position.rs  states.rs
src/specs/: mod.rs
src/structs/: game.rs
src/tests/: mod.rs
(+142 files in other folders)
