[package]
name = "modern-chess"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
dev = [] # Define a new feature called "cli"

[dependencies]
parity-scale-codec = "3.4.0"
parity-scale-codec-derive = "3.1.4"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
thiserror = "1.0"

[lib]
name = "modern_chess"
path = "src/lib.rs"

[[bin]]
name = "modern-chess"
path = "src/main.rs"
required-features = ["dev"]

[[bin]]
name = "modern-chess-cli"
path = "src/bin/chess_cli.rs"
